--- a/app/src/main/res/layout/activity_stoff.xml
+++ b/app/src/main/res/layout/activity_stoff.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +9,9 @@
         android:id="@+id/stoff_liste"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/search_bar">
+        android:layout_below="@+id/search_bar"
+        android:clickable="true"
+        android:focusable="true">
     </ListView>
 
     <android.support.design.widget.FloatingActionButton
@@ -20,4 +22,4 @@
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_add_white_36dp" />
 
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
