--- a/app/src/main/res/layout/stoff_card_view.xml
+++ b/app/src/main/res/layout/stoff_card_view.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,17 +10,8 @@
         android:layout_height="wrap_content"
         android:padding="16dp">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_alignParentLeft="true"
-            android:layout_marginBottom="16dp"
-            app:srcCompat="@drawable/cat_baby_overall" />
-
         <TextView
             android:id="@+id/titel_view"
-            android:layout_toRightOf="@id/imageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mamasliebchen"
@@ -29,7 +19,6 @@
 
         <TextView
             android:id="@+id/hersteller_view"
-            android:layout_toRightOf="@id/imageView"
             android:layout_below="@+id/titel_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -55,7 +44,44 @@
             android:text="3x"
             android:layout_alignParentRight="true"
             android:textAppearance="?android:textAppearanceMedium"
-            android:layout_marginTop="8dp"/>/>
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"/>
+
+        <CheckBox
+            android:id="@+id/panel_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/anzahl_view"
+            android:layout_marginRight="-8dp"/>
+
+        <TextView
+            android:id="@+id/panel_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/anzahl_view"
+            android:layout_toLeftOf="@id/panel_view"
+            android:text="Panel"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:layout_marginTop="6dp"/>
+
+        <CheckBox
+            android:id="@+id/muster_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_below="@id/panel_view"
+            android:layout_marginRight="-8dp" />
+
+        <TextView
+            android:id="@+id/muster_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/panel_view"
+            android:layout_toLeftOf="@id/muster_view"
+            android:text="Muster"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:layout_marginTop="6dp"/>
 
     </RelativeLayout>
 
