Saving Panel and Template info
Fixed crash on saving new information 
  - Missing ids for new checkboxes
Setting layout to stoff_item_layout -> card layout can be deleted later on
Removed unneccessary imports
Removed unused methods

--- a/app/src/main/res/layout/content_scrolling.xml
+++ b/app/src/main/res/layout/content_scrolling.xml
@@ -70,11 +70,13 @@
 
 
         <CheckBox
+            android:id="@+id/panel_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Panel" />
 
         <CheckBox
+            android:id="@+id/muster_checkbox"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Muster" />
