--- a/app/src/main/res/layout/stoff_card_view.xml
+++ b/app/src/main/res/layout/stoff_card_view.xml
@@ -2,7 +2,9 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:clickable="true"
+    android:onClick="">
 
     <RelativeLayout
         android:id="@+id/text_container"
@@ -48,7 +50,7 @@
             android:layout_marginBottom="8dp"/>
 
         <CheckBox
-            android:id="@+id/panel_view"
+            android:id="@+id/list_panel_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -60,25 +62,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/anzahl_view"
-            android:layout_toLeftOf="@id/panel_view"
+            android:layout_toLeftOf="@id/list_panel_view"
             android:text="Panel"
             android:textAppearance="?android:textAppearanceMedium"
             android:layout_marginTop="6dp"/>
 
         <CheckBox
-            android:id="@+id/muster_view"
+            android:id="@+id/list_muster_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_below="@id/panel_view"
+            android:layout_below="@id/list_panel_view"
             android:layout_marginRight="-8dp" />
 
         <TextView
             android:id="@+id/muster_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/panel_view"
-            android:layout_toLeftOf="@id/muster_view"
+            android:layout_below="@+id/list_panel_view"
+            android:layout_toLeftOf="@id/list_muster_view"
             android:text="Muster"
             android:textAppearance="?android:textAppearanceMedium"
             android:layout_marginTop="6dp"/>
