--- a/app/src/main/res/layout/stoff_item_layout.xml
+++ b/app/src/main/res/layout/stoff_item_layout.xml
@@ -12,6 +12,12 @@
         android:orientation="horizontal"
         android:padding="16dp">
 
+        <ImageView
+            android:id="@+id/stoff_image"
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:visibility="gone" />
+
         <RelativeLayout
             android:id="@+id/text_container"
             android:layout_width="match_parent"
@@ -35,47 +41,44 @@
                 android:layout_below="@+id/titel_view"
                 android:textAppearance="?android:textAppearanceMedium" />
 
-            <ImageView
-                android:id="@+id/list_panel_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/panel"
-                android:layout_below="@id/hersteller_view"
-                android:layout_marginLeft="-8dp"
-                android:layout_marginTop="8dp"/>
-
-            <ImageView
-                android:id="@+id/list_muster_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ansicht_stoffe"
-                android:layout_below="@id/hersteller_view"
-                android:layout_toRightOf="@id/list_panel_image"
-                android:layout_marginTop="8dp"/>
-
-        </RelativeLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
             <TextView
                 android:id="@+id/kategorie_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Baumwolle"
-                android:textAppearance="?android:textAppearanceLarge"/>
+                android:layout_below="@id/hersteller_view"
+                android:textAppearance="?android:textAppearanceMedium"/>
 
             <TextView
                 android:id="@+id/anzahl_view"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="5x"
-                android:layout_gravity="right"
-                android:textAppearance="?android:textAppearanceLarge" />
+                android:layout_below="@id/kategorie_view"
+                android:textAppearance="?android:textAppearanceMedium" />
 
-        </LinearLayout>
+            <ImageView
+                android:id="@+id/list_muster_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/ansicht_stoffe"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"/>
+
+            <ImageView
+                android:id="@+id/list_panel_image"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:src="@drawable/panel"
+                android:layout_alignParentRight="true"/>
+
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/delete_button"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:src="@android:drawable/ic_menu_delete"/>
 
     </LinearLayout>
 
