Fixed adding photo issues
Added permission in manifest, renaming of properties in stoff.java (cloth), loading image from database into cloth image, added ImageUtils class

--- a/app/src/main/res/layout/stoff_item_layout.xml
+++ b/app/src/main/res/layout/stoff_item_layout.xml
@@ -16,7 +16,10 @@
             android:id="@+id/stoff_image"
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:visibility="visible"
+            android:scaleType="centerCrop"
+            android:adjustViewBounds="true"
+            android:layout_marginRight="16dp"/>
 
         <RelativeLayout
             android:id="@+id/text_container"
